force-app/main/default/objects/AWS_Integration_Log__c/AWS_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>AWS Integration Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>AWS Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AWS Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>