force-app/main/default/objects/AWS_Integration_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AWS Integration Logs</relationshipLabel>
    <relationshipName>AWS_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>