force-app/main/default/objects/AWS_Integration_Log__c/fields/APN_Id__c.field-meta.xml
<CustomField>
    <fullName>APN_Id__c</fullName>
    <label>APN Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>