force-app/main/default/objects/AWS_Integration_Log__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <inlineHelpText>The close date AWS sent in the bypassed update</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>