force-app/main/default/objects/AWS_Integration_Log__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>The stage AWS sent in the bypassed update</inlineHelpText>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>