force-app/main/default/objects/AWS_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APN_Id__c</columns>
    <columns>Error__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>